# zero-point

./: .gitignore  Cargo.toml  README.md
assets/: test.hero.ron
crates/asset_loader_derive/: Cargo.toml
crates/asset_loader_derive/src/: lib.rs
src/: assets.rs  camera.rs  hero.rs  main.rs  player.rs  utils.rs  world.rs
src/assets/: hero.rs
src/logic/: crafting.rs
