[package]
name = "zero-point"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.5"
ndarray = "0.15"
image = "0.24.7"

bevy_third_person_camera = "0.1.7"
bevy-inspector-egui = "0.21.0"
bevy_rapier3d = "0.23.0"
bevy_atmosphere = "0.8.1"

[dependencies.bevy]
version = "0.12.0"
features = [
    "dynamic_linking"
]

# [workspace]
# resolver = "2" # Important! wgpu/Bevy needs this!
# members = ["libs/*"]

# [workspace.dependencies]
# bevy = "0.11.0"
# ron = "0.8"
# serde = { version = "1", features = ["derive"] }